// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.tab-panel > Interaction Hint > show the hint when focusing to tab item 1`] = `
.c1 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 1px 2px 2px 0px;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  max-height: 100%;
  outline: none;
  overflow-y: auto;
  padding: 4px 8px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 {
  max-width: 472px;
  margin: 9px 16px 0px;
  position: relative;
  outline: none;
}

.c0 + span {
  outline: none;
}

.c0::before {
  background-color: rgb(255, 255, 255);
  border-width: 1px medium medium 1px;
  border-style: solid none none solid;
  border-color: rgb(181, 76, 23) currentcolor currentcolor rgb(181, 76, 23);
  border-image: initial;
  content: "";
  height: 12px;
  pointer-events: none;
  position: absolute;
  width: 12px;
  top: -6px;
  transform: translateX(-50%) rotate(45deg);
  left: 10px;
}

<div
  class="c0"
  data-role="interaction-hint"
  role="dialog"
>
  <div
    class="c1"
    data-role="interaction-hint-content"
  >
    Navigation
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.tab-panel > Interaction Hint > showing the hint include badge content when focusing to tab item 1`] = `
.c1 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 1px 2px 2px 0px;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  max-height: 100%;
  outline: none;
  overflow-y: auto;
  padding: 4px 8px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 {
  max-width: 472px;
  margin: 9px 16px 0px;
  position: relative;
  outline: none;
}

.c0 + span {
  outline: none;
}

.c0::before {
  background-color: rgb(255, 255, 255);
  border-width: 1px medium medium 1px;
  border-style: solid none none solid;
  border-color: rgb(181, 76, 23) currentcolor currentcolor rgb(181, 76, 23);
  border-image: initial;
  content: "";
  height: 12px;
  pointer-events: none;
  position: absolute;
  width: 12px;
  top: -6px;
  transform: translateX(-50%) rotate(45deg);
  left: 10px;
}

<div
  class="c0"
  data-role="interaction-hint"
  role="dialog"
>
  <div
    class="c1"
    data-role="interaction-hint-content"
  >
    Search, 9 Info notifications
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.tab-panel > render basic tab-panel 1`] = `
.c4 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c4 * {
  width: 1px;
  height: 1px;
}

.c6 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c6 > span {
  display: inline-block;
}

.c6.c6 {
  max-width: unset;
}

.c9 {
  align-items: center;
  border-radius: 8px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
  display: inline-flex;
  flex-shrink: 0;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  height: calc(18px);
  line-height: normal;
  outline: transparent solid 1px;
  padding: 0px 4px;
  transform: scale(1);
  transition: transform 0.25s ease-in-out;
  background-color: rgb(5, 104, 174);
  color: rgb(255, 255, 255);
}

.c7 {
  display: inline-flex;
  position: absolute;
  top: calc(-12.15px);
}

.c7.badge-wrapper-exit-active .c8 {
  transform: scale(0);
}

.c7.badge-wrapper-enter .c8 {
  transform: scale(0);
}

.c7.badge-wrapper-enter-active .c8 {
  transform: scale(1);
}

.c2 {
  align-items: center;
  box-sizing: border-box;
  color: rgb(255, 255, 255);
  display: flex;
  font-size: 1.125rem;
  justify-content: center;
  list-style: none;
  min-height: 48px;
  position: relative;
  padding: 8px;
  cursor: pointer;
}

.c2 .c5 {
  color: inherit;
  font-size: inherit;
}

.c2::before {
  border: 2px solid transparent;
  inset: 0px;
  content: "";
  position: absolute;
}

.c2:focus {
  background-color: rgba(0, 0, 0, 0.3);
  color: rgb(255, 255, 255);
  margin: 0px 1px;
  outline: rgb(255, 255, 255) dotted 1px;
}

.c2:focus::before {
  border-color: rgb(255, 255, 255);
}

.c10 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  font-size: 1.125rem;
  justify-content: center;
  list-style: none;
  min-height: 48px;
  position: relative;
  padding: 8px;
  background: transparent;
  color: rgb(169, 179, 188);
}

.c10 .c5 {
  color: inherit;
  font-size: inherit;
}

.c10::before {
  border: 2px solid transparent;
  inset: 0px;
  content: "";
  position: absolute;
}

.c3 {
  display: inline-flex;
  justify-content: center;
}

.c0 {
  display: flex;
  height: 100%;
  width: 100%;
  min-width: 0px;
  flex-direction: row;
}

.c1 {
  background-color: rgb(89, 102, 115);
  box-sizing: border-box;
  display: flex;
  margin: 0px;
  min-width: 52px;
  padding: 48px 0px 0px;
  height: 100%;
  width: auto;
  flex-direction: column;
}

@media (pointer: coarse) {
  .c2:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgba(0, 0, 0, 0.3);
    color: rgb(255, 255, 255);
  }

  .c2:active::before {
    border-color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c2:hover {
    background-color: rgba(0, 0, 0, 0.3);
    color: rgb(255, 255, 255);
  }

  .c2:hover::before {
    border-color: rgb(255, 255, 255);
  }
}

<div
  class="c0 tab-panel"
  data-role="tab-panel"
>
  <ul
    aria-label="main navigation"
    aria-orientation="vertical"
    class="c1 tab-panel__tabs"
    data-role="tab-panel-tab-list"
    role="tablist"
  >
    <li
      aria-current="false"
      aria-label="Navigation"
      aria-labelledby="tab-1-hidden-title"
      aria-selected="false"
      class="c2 tab-panel__tab"
      data-role="tab-panel-tab"
      id="tab-1"
      role="tab"
      tabindex="0"
      title="Navigation"
    >
      <div
        class="c3 tab-panel__tab_content"
      >
        <span
          class="c4 -u-unseenButRead"
          data-role="hidden-text"
          id="tab-1-hidden-title"
        >
          Navigation
        </span>
        <i
          class="c5 c6 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            navigation
          </span>
        </i>
      </div>
    </li>
    <li
      aria-current="false"
      aria-label="Search"
      aria-labelledby="tab-1-hidden-title"
      aria-selected="false"
      class="c2 tab-panel__tab tab-classname"
      data-role="tab-panel-tab"
      id="tab-1"
      role="tab"
      style="color: red;"
      tabindex="-1"
      title="Search, 9 Info notifications"
    >
      <div
        class="c3 tab-panel__tab_content"
        style="position: relative;"
      >
        <span
          class="c4 -u-unseenButRead"
          data-role="hidden-text"
          id="tab-1-hidden-title"
        >
          Search
        </span>
        <i
          class="c5 c6 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            search
          </span>
        </i>
        <span
          class="c7 badge-wrapper"
          data-role="badge"
          id="info-badge-id"
          style="right: -8px;"
          title="9 Info notifications"
        >
          <span
            class="c4 -u-unseenButRead"
            data-role="hidden-text"
          >
            , 9 Info notifications
          </span>
          <span
            aria-hidden="true"
            class="c8 c9 badge badge--info"
            data-role="badge-content"
            data-type="info-badge"
          >
            9
          </span>
        </span>
      </div>
    </li>
    <li
      aria-current="false"
      aria-disabled="true"
      aria-label="Calendar"
      aria-labelledby="tab-1-hidden-title"
      aria-selected="false"
      class="c10 tab-panel__tab tab-panel__tab--disabled"
      data-role="tab-panel-tab"
      id="tab-1"
      role="tab"
      title="Calendar"
    >
      <div
        class="c3 tab-panel__tab_content"
      >
        <span
          class="c4 -u-unseenButRead"
          data-role="hidden-text"
          id="tab-1-hidden-title"
        >
          Calendar
        </span>
        <i
          class="c5 c6 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            event_note
          </span>
        </i>
      </div>
    </li>
  </ul>
</div>
`;

exports[`com.mgmtp.a12.widgets.tab-panel > render tab-panel with header 1`] = `
.c4 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c4 * {
  width: 1px;
  height: 1px;
}

.c6 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c6 > span {
  display: inline-block;
}

.c6.c6 {
  max-width: unset;
}

.c10 {
  align-items: center;
  border-radius: 8px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
  display: inline-flex;
  flex-shrink: 0;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  height: calc(18px);
  line-height: normal;
  outline: transparent solid 1px;
  padding: 0px 4px;
  transform: scale(1);
  transition: transform 0.25s ease-in-out;
  background-color: rgb(5, 104, 174);
  color: rgb(255, 255, 255);
}

.c8 {
  display: inline-flex;
  position: absolute;
  top: calc(-12.15px);
}

.c8.badge-wrapper-exit-active .c9 {
  transform: scale(0);
}

.c8.badge-wrapper-enter .c9 {
  transform: scale(0);
}

.c8.badge-wrapper-enter-active .c9 {
  transform: scale(1);
}

.c15 {
  display: -webkit-box;
  overflow: hidden;
  overflow-wrap: break-word;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  word-break: break-all;
}

.c15 > * {
  margin: 0px !important;
  padding: 0px !important;
}

.c2 {
  align-items: center;
  box-sizing: border-box;
  color: rgb(255, 255, 255);
  display: flex;
  font-size: 1.125rem;
  justify-content: center;
  list-style: none;
  min-height: 48px;
  position: relative;
  padding: 8px;
  cursor: pointer;
}

.c2 .c5 {
  color: inherit;
  font-size: inherit;
}

.c2::before {
  border: 2px solid transparent;
  inset: 0px;
  content: "";
  position: absolute;
}

.c2:focus {
  background-color: rgba(0, 0, 0, 0.3);
  color: rgb(255, 255, 255);
  margin: 0px 1px;
  outline: rgb(255, 255, 255) dotted 1px;
}

.c2:focus::before {
  border-color: rgb(255, 255, 255);
}

.c11 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  font-size: 1.125rem;
  justify-content: center;
  list-style: none;
  min-height: 48px;
  position: relative;
  padding: 8px;
  background: transparent;
  color: rgb(169, 179, 188);
}

.c11 .c5 {
  color: inherit;
  font-size: inherit;
}

.c11::before {
  border: 2px solid transparent;
  inset: 0px;
  content: "";
  position: absolute;
}

.c7 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  font-size: 1.125rem;
  justify-content: center;
  list-style: none;
  min-height: 48px;
  position: relative;
  padding: 8px;
  cursor: pointer;
  background-color: rgb(44, 51, 58);
  color: rgb(255, 255, 255);
}

.c7 .c5 {
  color: inherit;
  font-size: inherit;
}

.c7::before {
  border: 2px solid transparent;
  inset: 0px;
  content: "";
  position: absolute;
}

.c7:focus {
  background-color: rgba(0, 0, 0, 0.3);
  color: rgb(255, 255, 255);
  margin: 0px 1px;
  outline: rgb(255, 255, 255) dotted 1px;
}

.c7:focus::before {
  border-color: rgb(255, 255, 255);
}

.c7::after {
  background-color: rgb(255, 255, 255);
  bottom: 0px;
  content: "";
  left: 0px;
  position: absolute;
  top: 0px;
  width: 4px;
  height: 100%;
}

.c7::before {
  border-left-width: 4px;
}

.c7 .c5 {
  font-size: 1.25rem;
}

.c7:focus {
  background-color: rgba(0, 0, 0, 0.3);
}

.c7:focus::after {
  width: 0px;
}

.c18 {
  border: 8px solid rgb(44, 51, 58);
  flex-grow: 1;
  overflow-y: auto;
}

.c13 {
  align-items: center;
  justify-content: space-between;
  background-color: rgb(44, 51, 58);
  display: flex;
  min-height: 48px;
  padding: 0px 8px;
}

.c13 + .c17 {
  border-top-width: medium;
  border-top-style: none;
  border-top-color: currentcolor;
}

.c16 {
  display: flex;
  justify-content: flex-end;
  gap: 0px 8px;
}

.c16:only-child {
  flex: 1 1 0%;
}

.c3 {
  display: inline-flex;
  justify-content: center;
}

.c14 {
  flex: 1 1 0%;
  min-width: 0px;
  color: rgb(255, 255, 255);
  font-size: 1rem;
  font-weight: 600;
  padding: 0px 0px 0px 24px;
}

.c0 {
  display: flex;
  height: 100%;
  width: 100%;
  min-width: 0px;
  flex-direction: row;
}

.c1 {
  background-color: rgb(89, 102, 115);
  box-sizing: border-box;
  display: flex;
  margin: 0px;
  min-width: 52px;
  padding: 48px 0px 0px;
  height: 100%;
  width: auto;
  flex-direction: column;
}

.c12 {
  background: rgb(89, 102, 115);
  display: flex;
  flex-flow: column;
  flex-grow: 1;
  min-width: 0px;
  max-width: 100%;
  overflow: hidden;
  outline: none;
}

@media (pointer: coarse) {
  .c2:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgba(0, 0, 0, 0.3);
    color: rgb(255, 255, 255);
  }

  .c2:active::before {
    border-color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c2:hover {
    background-color: rgba(0, 0, 0, 0.3);
    color: rgb(255, 255, 255);
  }

  .c2:hover::before {
    border-color: rgb(255, 255, 255);
  }
}

@media (pointer: coarse) {
  .c7:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgba(0, 0, 0, 0.3);
    color: rgb(255, 255, 255);
  }

  .c7:active::before {
    border-color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c7:hover {
    background-color: rgba(0, 0, 0, 0.3);
    color: rgb(255, 255, 255);
  }

  .c7:hover::before {
    border-color: rgb(255, 255, 255);
  }
}

@media (pointer: coarse) {
  .c7:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgba(0, 0, 0, 0.3);
  }
}

@media (pointer: fine) {
  .c7:hover {
    background-color: rgba(0, 0, 0, 0.3);
  }

  .c7:hover::after {
    width: 0px;
  }
}

<div
  class="c0 tab-panel"
  data-role="tab-panel"
>
  <ul
    aria-label="main navigation"
    aria-orientation="vertical"
    class="c1 tab-panel__tabs"
    data-role="tab-panel-tab-list"
    role="tablist"
  >
    <li
      aria-current="false"
      aria-label="Navigation"
      aria-labelledby="tab-1-hidden-title"
      aria-selected="false"
      class="c2 tab-panel__tab"
      data-role="tab-panel-tab"
      id="tab-1"
      role="tab"
      tabindex="-1"
      title="Navigation"
    >
      <div
        class="c3 tab-panel__tab_content"
      >
        <span
          class="c4 -u-unseenButRead"
          data-role="hidden-text"
          id="tab-1-hidden-title"
        >
          Navigation
        </span>
        <i
          class="c5 c6 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            navigation
          </span>
        </i>
      </div>
    </li>
    <li
      aria-current="false"
      aria-label="Search"
      aria-labelledby="tab-1-hidden-title"
      aria-selected="true"
      class="c7 tab-panel__tab tab-panel__tab--selected tab-classname"
      data-role="tab-panel-tab"
      id="tab-1"
      role="tab"
      style="color: red;"
      tabindex="0"
      title="Search, 9 Info notifications"
    >
      <div
        class="c3 tab-panel__tab_content"
        style="position: relative;"
      >
        <span
          class="c4 -u-unseenButRead"
          data-role="hidden-text"
          id="tab-1-hidden-title"
        >
          Search
        </span>
        <i
          class="c5 c6 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            search
          </span>
        </i>
        <span
          class="c8 badge-wrapper"
          data-role="badge"
          id="info-badge-id"
          style="right: -8px;"
          title="9 Info notifications"
        >
          <span
            class="c4 -u-unseenButRead"
            data-role="hidden-text"
          >
            , 9 Info notifications
          </span>
          <span
            aria-hidden="true"
            class="c9 c10 badge badge--info"
            data-role="badge-content"
            data-type="info-badge"
          >
            9
          </span>
        </span>
      </div>
    </li>
    <li
      aria-current="false"
      aria-disabled="true"
      aria-label="Calendar"
      aria-labelledby="tab-1-hidden-title"
      aria-selected="false"
      class="c11 tab-panel__tab tab-panel__tab--disabled"
      data-role="tab-panel-tab"
      id="tab-1"
      role="tab"
      title="Calendar"
    >
      <div
        class="c3 tab-panel__tab_content"
      >
        <span
          class="c4 -u-unseenButRead"
          data-role="hidden-text"
          id="tab-1-hidden-title"
        >
          Calendar
        </span>
        <i
          class="c5 c6 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            event_note
          </span>
        </i>
      </div>
    </li>
  </ul>
  <div
    aria-labelledby="tab-1"
    class="c12 tab-panel__panel"
    data-role="panel"
    role="tabpanel"
  >
    <div
      class="c13 tab-panel__header"
      data-role="tab-panel-header"
    >
      <div
        aria-level="2"
        class="c14"
        data-role="tab-panel-heading"
        role="heading"
      >
        <div
          class="c15 css-ellipsis css-ellipsis-1-lines"
          data-role="css-ellipsis"
        >
          Test heading
        </div>
      </div>
      <div
        class="c16 tab-panel__addon-suffix"
      >
        <div
          class="tab-panel__suffix"
          data-role="tab-panel-suffix"
        >
          Header Suffix
        </div>
      </div>
    </div>
    <div
      class="c17 c18 tab-panel__content"
      data-role="tab-panel-content"
    >
      Panel 2
    </div>
  </div>
</div>
`;
